# SensorMonitor

./: .gitignore  Cargo.toml  README.md  build.gradle  local.properties  settings.gradle
.cargo/: config.toml
android/: AndroidManifest.xml  build.ps1  build.sh
app/: build.gradle  google-services.json
app/src/main/: AndroidManifest.xml
app/src/main/java/com/example/sensormonitor/: MainActivity.java  SensorMonitorApp.java
app/src/main/java/com/example/sensormonitor/api/: ESP32ApiService.java
app/src/main/java/com/example/sensormonitor/data/: AppDatabase.java
app/src/main/java/com/example/sensormonitor/model/: ESP32SensorData.java
app/src/main/res/color/: button_background_selector.xml  button_text_selector.xml
app/src/main/res/drawable/: ic_ph.xml  ic_rain.xml  ic_salinity.xml  ic_sensor.xml  ic_soil.xml  ic_temperature.xml  ic_water_level.xml
app/src/main/res/layout/: activity_main.xml  activity_sensor_detail.xml  activity_settings.xml  item_sensor_card.xml
app/src/main/res/menu/: menu_main.xml
app/src/main/res/values/: strings.xml  styles.xml
docs/: huong_dan_su_dung.md
esp32_code/: esp32_sensor_monitor.ino
src/: main.rs
src/api/: esp32_api.rs  firebase_api.rs  mod.rs
src/data/: database.rs  mod.rs
src/data/dao/: mod.rs  sensor_reading_dao.rs  sensor_threshold_dao.rs
src/data/entity/: mod.rs
src/model/: mod.rs  sensor_data.rs  sensor_types.rs
src/repository/: mod.rs  sensor_repository.rs
src/ui/: mod.rs  widgets.rs
src/util/: date_converter.rs  mod.rs  preferences.rs
src/worker/: mod.rs  sensor_data_worker.rs
(+11 files in other folders)
