[package]
name = "sensor_monitor"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
log = "0.4.20"
env_logger = "0.10.0"
chrono = "0.4.31"
serde = { version = "1.0.190", features = ["derive"] }
serde_json = "1.0.108"
rusqlite = { version = "0.29.0", features = ["bundled"] }
once_cell = "1.18.0"
anyhow = "1.0.75"
reqwest = { version = "0.11.22", features = ["json", "blocking"] }
tokio = { version = "1.34.0", features = ["full"] }
firebase-rs = "2.0.8"
futures = "0.3.29"
dirs-next = "2.0.0"

# Pure Rust Android UI
winit = "0.29.4"
raw-window-handle = "0.5.2"
ndk = "0.7.0"
ndk-glue = "0.7.0"
android-activity = "0.5.0"

# For rendering
cosmic-text = "0.10.0"
eframe = { version = "0.23.0", default-features = false, features = ["glow"] }
egui = "0.23.0"
egui_plot = "0.23.0"

[target.'cfg(target_os = "android")'.dependencies]
ndk-context = "0.1.1"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
strip = true 